a few content changes, updating icons, got wrong ones in at the moment

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
+  name: Catalyst Web Design
+  site: 'https://catalystweb.design'
   base: '/'
   trailingSlash: false
 
@@ -9,14 +9,14 @@ site:
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: Catalyst Web
+    template: '%s — Catalyst Web'
+  description: "\U0001F680 An agency catalyzing growth and great experiences for Startups, Small Business, SaaS, Professional Portfolios, Landing Pages & Blogs."
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: Catalyst Web
     images:
       - url: '~/assets/images/default.png'
         width: 1200
