--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@onwidget/astrowind",
-  "version": "1.0.0-beta.35",
-  "description": "AstroWind: A free template using Astro 4.0 and Tailwind CSS. Astro starter theme.",
+  "name": "@mikepeiman/catalystwebdesign",
+  "version": "0.0.1",
+  "description": "Catalyst Web Design: A Design & Development Agency.",
   "type": "module",
   "private": true,
   "engines": {
