--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mikepeiman/catalystwebdesign",
+  "name": "@mikepeiman/catalystdesign",
   "version": "0.0.1",
-  "description": "catalyst Design: A Design & Development Agency.",
+  "description": "Catalyst Web: A Design & Development Agency.",
   "type": "module",
   "private": true,
   "engines": {
@@ -17,6 +17,7 @@
     "lint:eslint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/image": "^0.18.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@astrolib/analytics": "^0.5.0",
