--- a/package.json
+++ b/package.json
@@ -12,29 +12,33 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "2.10.0",
+    "@skeletonlabs/tw-plugin": "0.4.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.13",
+    "@types/node": "20.14.2",
+    "autoprefixer": "10.4.19",
+    "flowbite-svelte": "^0.46.1",
+    "flowbite-svelte-blocks": "^1.1.2",
+    "flowbite-svelte-icons": "^1.6.1",
+    "flowbite-typography": "^1.0.3",
+    "postcss": "8.4.38",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "3.4.4",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
-    "postcss": "8.4.38",
-    "autoprefixer": "10.4.19",
-    "tailwindcss": "3.4.4",
-    "@skeletonlabs/skeleton": "2.10.0",
-    "@skeletonlabs/tw-plugin": "0.4.0",
-    "vite-plugin-tailwind-purgecss": "0.3.3",
-    "@tailwindcss/typography": "0.5.13",
-    "@tailwindcss/forms": "0.5.7",
-    "@types/node": "20.14.2"
+    "vite-plugin-tailwind-purgecss": "0.3.3"
   },
   "type": "module",
   "dependencies": {
-    "highlight.js": "11.9.0",
-    "@floating-ui/dom": "1.6.5"
+    "@floating-ui/dom": "1.6.5",
+    "highlight.js": "11.9.0"
   }
 }
