--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.6.5",
+    "@tabler/icons-svelte": "^3.6.0",
     "highlight.js": "11.9.0"
   }
 }
