--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
   "dependencies": {
     "@floating-ui/dom": "1.6.5",
     "@tabler/icons-svelte": "^3.6.0",
-    "highlight.js": "11.9.0"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "clsx": "^2.1.1",
+    "highlight.js": "11.9.0",
+    "svelte-motion": "^0.12.2",
+    "tailwind-merge": "^2.3.0"
   }
 }
