--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^2.1.1",
     "highlight.js": "11.9.0",
+    "preline": "^2.3.0",
     "svelte-motion": "^0.12.2",
     "tailwind-merge": "^2.3.0"
   }
