--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "postcss": "8.4.38",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "sass": "^1.77.6",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-preprocess": "^6.0.1",
     "tailwindcss": "3.4.4",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -34,6 +36,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@builder.io/sdk-svelte": "^1.0.31",
     "@floating-ui/dom": "1.6.5",
     "@tabler/icons-svelte": "^3.6.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
