--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@floating-ui/dom": "1.6.5",
     "@tabler/icons-svelte": "^3.6.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "chroma-js": "^2.4.2",
     "clsx": "^2.1.1",
     "highlight.js": "11.9.0",
     "preline": "^2.3.0",
